--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@changesets/cli": "^2.27.1",
+    "@hono/zod-openapi": "^0.11.1",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.3.4",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
@@ -42,7 +43,12 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-email/components": "^0.0.17",
+    "@react-email/render": "^0.0.13",
+    "@scalar/hono-api-reference": "^0.5.31",
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@tanstack/react-query": "^5.35.5",
+    "@tanstack/react-query-devtools": "^5.35.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -64,6 +70,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
     "react-resizable-panels": "^2.0.19",
+    "resend": "^3.2.0",
     "sharp": "^0.33.3",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
