--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,9 @@
 		"noEmit": true,
 		"incremental": true,
 		"esModuleInterop": true,
-		"module": "esnext",
-		"moduleResolution": "node",
+		"module": "NodeNext",
+		"moduleResolution": "Bundler",
+		"noUncheckedIndexedAccess": true,
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
