--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		"noEmit": true,
 		"incremental": true,
 		"esModuleInterop": true,
-		"module": "NodeNext",
+		"module": "esnext",
 		"moduleResolution": "Bundler",
 		"noUncheckedIndexedAccess": true,
 		"resolveJsonModule": true,
